--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+                android:layout_height="match_parent"
+                android:padding="20dp"
+    tools:ignore="ExtraText">
 
 
-    <ImageView
+<TextView
         android:id="@+id/image_view"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -30,55 +32,99 @@
         android:gravity="end">
 
         <TextView
-            android:id="@+id/text_for_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pet's name: "
             />
 
         <TextView
-            android:id="@+id/text_for_animal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Animal: "
-            />
-
-        <TextView
-            android:id="@+id/text_for_breed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Breed: "
-            />
-
-        <TextView
-            android:id="@+id/text_for_sex"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sex: "
-            />
-
-        <TextView
-            android:id="@+id/text_for_colour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Colour: "
-            />
-
-        <TextView
-            android:id="@+id/text_for_date_of_birth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date of birth: "
             />
 
         <TextView
-            android:id="@+id/text_for_owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sex: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Breed: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Colour: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Distinguishing marks: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chip ID: "
+            />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Owner: "
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Owner's address: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Owner's phone: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vet's name: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vet's address: "
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vet's phone: "
             />
 
     </LinearLayout>
+
+
+
+    <TextView
+        android:id="@+id/text_for_comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comments: "
+        android:textSize="18sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/layout_information_text_stable"
+        android:layout_marginTop="20sp"
+        />
+
 
 
     <!--Text that changes -->
@@ -88,18 +134,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:maxLength="15"
-        />
+        android:layout_alignParentRight="true"        />
+        <!--android:maxLength="15"-->
+
 
     <TextView
-        android:id="@+id/pet_animal_view"
+        android:id="@+id/pet_date_of_birth_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/pet_name_view"
-        android:maxLength="15"
+        android:layout_below="@id/pet_name_view"        />
+        <!--android:maxLength="15"-->
+        />
+
+    <TextView
+        android:id="@+id/pet_sex_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_date_of_birth_view"        />
+        <!--android:maxLength="15"-->
         />
 
     <TextView
@@ -108,20 +164,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/pet_animal_view"
-        android:maxLength="15"
-
-        />
-
-
-    <TextView
-        android:id="@+id/pet_sex_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/pet_breed_view"
-        android:maxLength="15"
+        android:layout_below="@id/pet_sex_view"        />
+        <!--android:maxLength="15"-->
         />
 
     <TextView
@@ -130,18 +174,28 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/pet_sex_view"
-        android:maxLength="15"
+        android:layout_below="@id/pet_breed_view"        />
+        <!--android:maxLength="15"-->
         />
 
     <TextView
-        android:id="@+id/pet_date_of_birth_view"
+        android:id="@+id/pet_distinguishing_marks_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/pet_colour_view"
-        android:maxLength="15"
+        android:layout_below="@id/pet_colour_view"        />
+        <!--android:maxLength="15"-->
+        />
+
+    <TextView
+        android:id="@+id/pet_chip_id_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_distinguishing_marks_view"        />
+        <!--android:maxLength="15"-->
         />
 
     <TextView
@@ -150,21 +204,72 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/pet_date_of_birth_view"
-        android:maxLength="15"
+        android:layout_below="@id/pet_chip_id_view"        />
+        <!--android:maxLength="15"-->
         />
-
-    <EditText
-        android:id="@+id/edit_text_pet_info"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/pet_owner_address_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/pet_name_owner_view"
-        android:layout_marginTop="20dp"
-
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_name_owner_view"        />
+        <!--android:maxLength="15"-->
         />
+    <TextView
+        android:id="@+id/pet_owner_phone_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_owner_address_view"        />
+        <!--android:maxLength="15"-->
+        />
+    <TextView
+        android:id="@+id/pet_vet_name_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_owner_phone_view"        />
+        <!--android:maxLength="15"-->
+        />
+
+    <TextView
+        android:id="@+id/pet_vet_address_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_vet_name_view"        />
+        <!--android:maxLength="15"-->
+        />
+
+    <TextView
+        android:id="@+id/pet_vet_pnone_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/pet_vet_address_view"        />
+        <!--android:maxLength="15"-->
+        />
+
+    <TextView
+        android:id="@+id/pet_comments_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/text_for_comments"
+        android:layout_toEndOf="@id/text_for_comments"
+        android:layout_below="@id/pet_vet_pnone_view"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="5sp"
+        android:layout_marginStart="5sp"
+        android:maxLength="100"
+        />
+
+
+    <!--Arrow Buttons-->
 
     <ImageButton
         android:id="@+id/arrow_left"
@@ -173,7 +278,9 @@
         android:src="@drawable/arrow_left"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
 
     <ImageButton
@@ -184,7 +291,11 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
 
 </RelativeLayout>
+
+
