fixes, updates and additions

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -15,9 +15,9 @@
         android:id="@+id/btn_for_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:text="CLICK FOR DETAILS"/>
+        android:layout_centerHorizontal="true"
+        android:text="MORE..." />
 
 
 </RelativeLayout>
