--- a/app/src/main/res/layout-land/activity_browse.xml
+++ b/app/src/main/res/layout-land/activity_browse.xml
@@ -262,7 +262,18 @@
         android:layout_marginTop="5sp"
         android:maxLength="100"
         />
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
 
+        <TextView
+            android:id="@+id/view_for_database_results2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
 
     <!--Arrow Buttons-->
 
