--- a/app/src/main/res/layout-land/activity_browse.xml
+++ b/app/src/main/res/layout-land/activity_browse.xml
@@ -244,7 +244,7 @@
         />
 
     <TextView
-        android:id="@+id/pet_vet_pnone_view"
+        android:id="@+id/pet_vet_phone_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
