--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -24,19 +25,21 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button_log_in"
+            android:id="@+id/button_login"
             style="@android:style/Widget.Material.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Log In" />
+            android:text="Log In"
+            tools:ignore="NewApi" />
 
         <Button
-            android:id="@+id/button_go_register"
+            android:id="@+id/button_register"
             style="@android:style/Widget.Material.Button.Toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Need account? Register Here " />
+            android:text="Need account? Register Here "
+            tools:ignore="NewApi" />
     </LinearLayout>
 </LinearLayout>
