--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,11 @@
 
     <item android:id="@+id/menu_btn_grid_view"
         android:title="@string/grid"/>
+    <item android:id="@+id/menu_login"
+        android:title="Log in" />
 
+    <item android:id="@+id/menu_logout"
+        android:title="Log out" />
 
 </menu>
 
