--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#08253c"
-    tools:context="inducesmile.com.androidloginandregistration.LoginActivity">
+    tools:context=".LoginActivity">
     <TextView
         android:id="@+id/welcome"
         android:text="@string/welcome"
