--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#08253c"
-    tools:context="inducesmile.com.androidloginandregistration.RegisterActivity">
+    tools:context=".RegisterActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
