--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,98 +1,82 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#08253c"
-    tools:context=".MainActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/background">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/lytTitlebar"
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/titlebar_background"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/text"
+            android:text="My Pet App"
+            android:shadowColor="@color/shadow"
+            android:shadowDx="0.5"
+            android:shadowDy="0.5"
+            android:shadowRadius="0.5"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            tools:ignore="RtlHardcoded" />
+
+        <ImageButton
+            android:id="@+id/imgSetting"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:src="@drawable/setting"
+            android:background="@drawable/button_top_style_2"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            tools:ignore="ContentDescription,RtlHardcoded" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/lytContent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/username"
-        android:id="@+id/username"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        tools:ignore="RtlHardcoded" />
+        android:orientation="vertical"
+        android:layout_below="@+id/lytTitlebar"
+        >
+        <ImageView
+            android:id="@+id/imgCover"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:src="@drawable/cover_image"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:id="@+id/username_field"
-        android:layout_below="@+id/username"
-        android:layout_alignLeft="@+id/username"
-        android:background="#ffffff"
-        android:layout_alignStart="@+id/username"
-        android:inputType="" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password"
-        android:id="@+id/password"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:layout_below="@+id/username_field"
-        android:layout_alignLeft="@+id/username_field"
-        android:layout_alignStart="@+id/username_field"
-        android:layout_marginTop="30dp" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/password_field"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="#ffffff"
-        android:layout_below="@+id/password"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:id="@+id/login"
-        android:layout_below="@+id/password_field"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_instruction"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
-        android:textSize="16sp"
-        android:textColor="#ffffff"
-        android:id="@+id/textView"
-        android:layout_below="@+id/login"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/register_button"
-        android:id="@+id/register_button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp" />
-
+        <TextView
+            android:id="@+id/txtCaption"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/caption"
+            android:textColor="@color/text"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:text="@string/main_menu"
+            android:paddingLeft="10dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            tools:ignore="RtlHardcoded,RtlSymmetry" />
+        <ListView
+            android:id="@+id/listMainMenu"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:fadeScrollbars="true"
+            android:divider="@color/background"
+            android:dividerHeight="1dip"/>
+    </LinearLayout>
 </RelativeLayout>
+
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
 <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
