--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,22 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"
+        android:orderInCategory="100" />
+    <item android:id="@+id/menu_login"
+        android:title="Log in" />
 
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_logout"
+        android:title="Log out" />
 
-    <!--<item android:id="@+id/menu_btn_list_view"-->
-        <!--android:title="@string/list" />-->
-
-    <!--<item android:id="@+id/menu_btn_grid_view"-->
-        <!--android:title="@string/grid"/>-->
-    <!--<item android:id="@+id/menu_login"-->
-        <!--android:title="Log in" />-->
-
-    <!--<item android:id="@+id/menu_logout"-->
-        <!--android:title="Log out" />-->
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="settings"
-        app:showAsAction="never" />
 </menu>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+
+<!--<menu xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android" >-->
+
+    <!--&lt;!&ndash;<item android:id="@+id/menu_btn_list_view"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:title="@string/list" />&ndash;&gt;-->
+
+    <!--&lt;!&ndash;<item android:id="@+id/menu_btn_grid_view"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:title="@string/grid"/>&ndash;&gt;-->
+    <!--&lt;!&ndash;<item android:id="@+id/menu_login"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:title="Log in" />&ndash;&gt;-->
+
+    <!--&lt;!&ndash;<item android:id="@+id/menu_logout"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:title="Log out" />&ndash;&gt;-->
+    <!--<item-->
+        <!--android:id="@+id/action_settings"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="settings"-->
+        <!--app:showAsAction="never" />-->
+<!--</menu>-->
 
