--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -63,13 +63,13 @@
 		    android:layout_height="wrap_content"
 		    style="@android:style/Widget.ProgressBar.Inverse"
 		    android:layout_centerInParent="true"/>
-	    <TextView 
-			android:id="@+id/txtAlert"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/alert"
-			android:textColor="@color/text"
-			android:textSize="14sp"
-			android:layout_centerInParent="true"
-			android:visibility="gone"/>
+	    <!--<TextView -->
+			<!--android:id="@+id/txtAlert"-->
+			<!--android:layout_width="wrap_content"-->
+			<!--android:layout_height="wrap_content"-->
+			<!--android:text="@string/alert"-->
+			<!--android:textColor="@color/text"-->
+			<!--android:textSize="14sp"-->
+			<!--android:layout_centerInParent="true"-->
+			<!--android:visibility="gone"/>-->
 </RelativeLayout>
