--- a/app/src/main/res/layout/pet_list.xml
+++ b/app/src/main/res/layout/pet_list.xml
@@ -93,14 +93,14 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_centerInParent="true" />
-	    <TextView 
-			android:id="@+id/txtAlert"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/alert"
-			android:textColor="@color/text"
-			android:textSize="14sp"
-			android:layout_centerInParent="true"
-			android:visibility="gone"/>
+	    <!--<TextView -->
+			<!--android:id="@+id/txtAlert"-->
+			<!--android:layout_width="wrap_content"-->
+			<!--android:layout_height="wrap_content"-->
+			<!--android:text="@string/alert"-->
+			<!--android:textColor="@color/text"-->
+			<!--android:textSize="14sp"-->
+			<!--android:layout_centerInParent="true"-->
+			<!--android:visibility="gone"/>-->
 
 </RelativeLayout>
