--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,237 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#d4304ffe"
+
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    class="com.sdmd.mgava.mypetsapp.fragment.PetInfoListFragment"
+    android:id="@+id/sp_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sdmd.mgava.mypetsapp.MainActivity"
-    >
-
-
-
-    <ListView
-        android:id="@+id/Species"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-
-        android:dividerHeight="30.0sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-
-
-        />
-
-
-</android.support.constraint.ConstraintLayout>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-     <!--android:layout_height="match_parent"-->
-        <!--android:paddingLeft="@dimen/padding_large"-->
-        <!--android:paddingRight="@dimen/padding_large"-->
-        <!--android:paddingTop="@dimen/padding_large"-->
-        <!--android:paddingBottom="@dimen/padding_large"-->
-        <!--android:background="#2c1f1a"-->
-       <!--tools:context=".MainActivity">-->
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/lytTitlebar"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="45dp"-->
-        <!--android:background="@drawable/titlebar_background"-->
-        <!--android:layout_alignParentTop="true">-->
-        <!--<TextView-->
-            <!--android:id="@+id/txtTitle"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textSize="18sp"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textColor="@color/text"-->
-            <!--android:text="My Pet App"-->
-            <!--android:shadowColor="@color/shadow"-->
-            <!--android:shadowDx="0.5"-->
-            <!--android:shadowDy="0.5"-->
-            <!--android:shadowRadius="0.5"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--tools:ignore="RtlHardcoded" />-->
-
-        <!--<ImageButton-->
-            <!--android:id="@+id/imgSetting"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="45dp"-->
-            <!--android:paddingLeft="5dp"-->
-            <!--android:paddingRight="5dp"-->
-            <!--android:src="@drawable/setting"-->
-            <!--android:background="@drawable/button_top_style_2"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--tools:ignore="ContentDescription,RtlHardcoded" />-->
-    <!--</RelativeLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:id="@+id/lytContent"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_below="@+id/lytTitlebar"-->
-        <!--&gt;-->
-        <!--<ImageView-->
-            <!--android:id="@+id/imgCover"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="150dp"-->
-            <!--android:src="@drawable/cover_image"-->
-            <!--android:scaleType="centerCrop"-->
-            <!--tools:ignore="ContentDescription" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/txtCaption"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/caption"-->
-            <!--android:textColor="@color/text"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textSize="14sp"-->
-            <!--android:text="@string/main_menu"-->
-            <!--android:paddingLeft="10dp"-->
-            <!--android:paddingTop="3dp"-->
-            <!--android:paddingBottom="3dp"-->
-            <!--tools:ignore="RtlHardcoded,RtlSymmetry" />-->
-        <!--<ListView-->
-            <!--android:id="@+id/listMainMenu"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:fadeScrollbars="true"-->
-            <!--android:divider="@color/background"-->
-            <!--android:dividerHeight="1dip"/>-->
-    <!--</LinearLayout>-->
-<!--</RelativeLayout>-->
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-    <!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:inputType="textEmailAddress"-->
-        <!--android:ems="10"-->
-        <!--android:id="@+id/email"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:hint="Email"-->
-        <!--android:layout_marginTop="10dp"/>-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:inputType="textPassword"-->
-        <!--android:ems="10"-->
-        <!--android:id="@+id/password"-->
-        <!--android:layout_below="@+id/email"-->
-        <!--android:hint="Password"-->
-        <!--android:layout_marginTop="10dp"/>-->
-
-    <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="LOGIN"-->
-        <!--android:id="@+id/button"-->
-        <!--android:layout_below="@+id/password"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:onClick="checkLogin"/>-->
-
-<!--</RelativeLayout>-->
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent"-->
-    <!--android:orientation="vertical" >-->
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/uname"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="User Name"-->
-
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->
-
-
-    <!--<EditText-->
-        <!--android:id="@+id/edituname"-->
-
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:singleLine="true"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp">-->
-
-
-        <!--<requestFocus />-->
-    <!--</EditText>-->
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/pass"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Password"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->
-
-
-    <!--<EditText-->
-        <!--android:id="@+id/editpw"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:inputType="textPassword"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"/>-->
-
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/relativeLayout1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" >-->
-
-        <!--<Button-->
-            <!--android:id="@+id/login"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="5dp"-->
-            <!--android:layout_marginRight="5dp"-->
-            <!--android:text="Login" />-->
-
-
-
-
-        <!--<Button-->
-            <!--android:id="@+id/register"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Register"-->
-            <!--android:layout_toRightOf="@id/login"/>-->
-
-    <!--</RelativeLayout>-->
-
-
-
-
-<!--</LinearLayout>-->
-
+    tools:layout="@layout/fragment_species_list" />
